# IntegratedPower-Rust

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/: 货物分析表.md
resources/qml/: DirectorySelector.qml  MainWindow.qml  ProcessorList.qml
scripts/: copy_resources.ps1  package.ps1
src/: app.rs  assets.rs  error.rs  error_logger.rs  logger.rs  main.rs
src/config/: manager.rs  mod.rs
src/controller/: main_controller.rs  mod.rs
src/engine/: data_engine.rs  excel_extractor.rs  file_type_profile.rs  identification_error.rs  mod.rs  recognition_rule.rs  row_identifier.rs
src/engine/rules/: color_rule.rs  composite_rule.rs  merge_state_rule.rs  mod.rs  text_pattern_rule.rs
src/history/: manager.rs  mod.rs
src/models/: mod.rs  processor_config.rs  progress.rs  result.rs  row_type.rs  state.rs
src/processor/: manager.rs  mod.rs  trait_def.rs
src/processor/examples/: cargo_analysis_processor.rs  example_processor1.rs  example_processor2.rs  excel_structure_analyzer.rs  mod.rs
src/ui/: directory_selector.rs  history.rs  history_view.rs  home.rs  log_viewer.rs  main_window.rs  mod.rs  processing.rs  processor_list.rs  progress_view.rs  qt_app.rs  settings.rs  theme.rs
