[package]
name = "integrated-power"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI 框架
egui = "0.28"
eframe = { version = "0.28", default-features = true, features = ["default_fonts"] }

# 文件对话框
rfd = "0.14"

# 数据处理
polars = { version = "0.44", features = ["lazy", "dtype-full", "parquet"] }
calamine = "0.26"

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 错误处理
thiserror = "1"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 系统集成
dirs = "5"
dark-light = "1"
num_cpus = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 其他工具
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
